[gd_scene load_steps=11 format=3 uid="uid://ckx8d6ifkhtoc"]

[ext_resource type="PackedScene" uid="uid://pc4mgv2nv8af" path="res://Objetos/Funcionalidade/CompHitBox.tscn" id="1_hpi2w"]
[ext_resource type="Texture2D" uid="uid://bnyawnirg7qrl" path="res://Sprites/Cururu/MagiaProjetil/05.png" id="1_lvlep"]
[ext_resource type="Script" uid="uid://830xnubrppc8" path="res://Scripts/Componentes/ProjetilMagia.gd" id="1_xp004"]
[ext_resource type="Texture2D" uid="uid://cesnjpjix6hdh" path="res://Sprites/Cururu/MagiaProjetil/06.png" id="2_xp004"]
[ext_resource type="Texture2D" uid="uid://cepj60xicaxs3" path="res://Sprites/Cururu/MagiaProjetil/01.png" id="3_34liy"]
[ext_resource type="Texture2D" uid="uid://clja3ewfhkpku" path="res://Sprites/Cururu/MagiaProjetil/02.png" id="4_w8pvd"]
[ext_resource type="Texture2D" uid="uid://bimkwmfoomoo1" path="res://Sprites/Cururu/MagiaProjetil/03.png" id="5_n5pnw"]
[ext_resource type="Texture2D" uid="uid://dxe573euoa7eu" path="res://Sprites/Cururu/MagiaProjetil/04.png" id="6_7s4x6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hxyyo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lvlep")
}, {
"duration": 1.0,
"texture": ExtResource("2_xp004")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_34liy")
}, {
"duration": 1.0,
"texture": ExtResource("4_w8pvd")
}, {
"duration": 1.0,
"texture": ExtResource("5_n5pnw")
}, {
"duration": 1.0,
"texture": ExtResource("6_7s4x6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g7efx"]
radius = 154.0

[node name="ProjetilMagia" type="Node2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_xp004")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hxyyo")
animation = &"Hit"
autoplay = "default"

[node name="HitBox" parent="." instance=ExtResource("1_hpi2w")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_g7efx")

[node name="Colisao" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao"]
shape = SubResource("CircleShape2D_g7efx")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="body_entered" from="Colisao" to="." method="_on_colisao_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
